# accuMUlate

./: .travis.yml  CMakeLists.txt  EMTest.cc  MutationProb.cc  MutationProb.h  README.md  SequenceProb.cc  SequenceProb.h  main.cc  model.cc  parsers.cc  parsers.h
Modules/: FindBamtools.cmake
cmakeModule/: FindBamtools.cmake
include/googletest-trunk/.svn/: wc.db
runstats/: gprof_03_19.txt  release.stats
runstats/linux-i7/: gprof_stats.txt  valgrind_memcheck.txt
src/: CMakeLists.txt  EM.cc  EMTest.cc  EvolutionModel.cc  EvolutionModel.h  JC69.cc  JC69.h  Lookup.cc  Lookup.h  MutationProb.cc  MutationProb.h  SequenceProb.cc  SequenceProb.h  SiteGenotypeIndex.cpp  SiteGenotypeIndex.h  SiteProb.cc  SiteProb.h  VariantVisitor.cc  VariantVisitor.h  boost_input_utils.cc  boost_input_utils.h  constant.h  genome_data_stream.cc  genome_data_stream.h  lookup.cc  lookup.h  main.cc  main_alignment_preprocessor.cc  main_em.cc  main_refit_data.cc  model.cc  model.h  mutation_model.cc  mutation_model.h  mutation_model_multi_categories.cc  mutation_model_multi_categories.h  mutation_prob.cc  mutation_prob.h  parsers.cc  parsers.h  (+20 more)
src/algorithm/: CMakeLists.txt  em_algorithm.cc  em_algorithm.h  em_algorithm_binomial.cc  em_algorithm_binomial.h  em_algorithm_multithread.cc  em_algorithm_multithread.h  em_algorithm_mutation.cc  em_algorithm_mutation.h  em_algorithm_mutation_v1.cc  em_algorithm_mutation_v1.h  em_algorithm_thread.cc  em_algorithm_thread.h  em_algorithm_thread_mutation.cc  em_algorithm_thread_mutation.h  em_data.h  em_data_binary.h  em_data_binomial.cc  em_data_binomial.h  em_data_mutation.cc  em_data_mutation.h  em_data_mutation_v1.cc  em_data_mutation_v1.h  em_logger.cpp  em_logger.h  em_model.h  em_model_binary.h  em_model_binomial.cc  em_model_binomial.h  em_model_mutation.cc  em_model_mutation.h  em_model_mutation_v1.cc  em_model_mutation_v1.h  em_summary_stat.cc  em_summary_stat.h  em_summary_stat_binomial.cc  em_summary_stat_binomial.h  em_summary_stat_mutation.cc  em_summary_stat_mutation.h  em_summary_stat_mutation_v1.cc  (+1 more)
src/distributions/: CMakeLists.txt  DirichletMultinomialDistribution.cpp  DirichletMultinomialDistribution.h
src/evolutionModels/: CMakeLists.txt  EvolutionModel.cc  F81.cc  F81.h  JC69.h
src/evolution_models/: CMakeLists.txt  EvolutionModel.cc  EvolutionModel.h  F81.cc  F81.h  JC69.cc  JC69.h
src/io_data/: CMakeLists.txt  VariantVisitor.cc  VariantVisitor.h  boost_input_utils.cc  boost_input_utils.h  genome_data_stream.cc  genome_data_stream.h  parsers.cc  parsers.h  pileup_utils.cc  pileup_utils.h  variant_visitor_two.cc  variant_visitor_two.h
src/models/: CMakeLists.txt  EvolutionModel.cc  EvolutionModel.h  F81.cc  F81.h  JC69.cc  JC69.h
src/mutations/: CMakeLists.txt  genotype_utils.cpp  genotype_utils.h  model.cc  model.h  mutation_model.cc  mutation_model.h  mutation_model_multi_categories.cc  mutation_model_multi_categories.h  mutation_prob.cc  mutation_prob.h  sequence_prob_v1.cc  sequence_prob_v1.h  sequencing_factory.cc  sequencing_factory.h  site_genotype_index.h  site_genotypes.h  site_prob.cc  site_prob.h
src/utils/: freq_seq.cc  post_processor.cc
test/: CMakeLists.txt  MutationProbTest.cc  SequenceProbTest.cc  SiteProbTest.cc  model_test.cc  mutation_model_test.cc  mutation_prob_test.cc  sequence_prob_test.cc  sequencing_factory_test.cc  site_genotype_index_test.cc  site_prob_test.cc  test.bam  test.bed  unittest_utils.cc  unittest_utils.h
test/algorithm/: CMakeLists.txt  em_algorithm_binomial_test.cc  em_algorithm_mutation_test.cc
test/evolution_models/: CMakeLists.txt  F81.cc
utils/: post_processor.cc
